# HipDrrPlanner

./: .gitignore  CMakeLists.txt  ITK_LIBS_540.cmake  OPENCV_LIBS_4100.cmake  VTK_LIBS.cmake  VTK_LIBS_901.cmake  buildSolution.cmd  deploy.cmd
Application/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
HipSurgeryPlanner/: CMakeLists.txt  Coverage_Calculator.cpp  Coverage_Calculator.h  DRRImageProcess.cpp  DRRImageProcess.h  DRRImageProcess2.cpp  DRRImageProcess2.h  HipDrrPlanner.cpp  HipDrrPlanner.h  HipSurgeryPlanner.cpp  HipSurgeryPlanner.h  ImageIO.h  main.cpp  polydata_dist_calculator.cpp  polydata_dist_calculator.h  vtk_tools.cpp  vtk_tools.h
